--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
     "cron": "^1.2.1",
     "express": "^4.14.0",
     "express-http-proxy": "^0.10.1",
