--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.14.0",
     "express-http-proxy": "^0.10.1",
     "formidable": "^1.1.1",
+    "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
+    "maic-marked": "^0.3.7",
     "marked": "^0.3.6",
     "moment": "^2.17.1",
     "mongodb": "^2.2.22",
