--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.3.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
+    "simple-git": "^1.67.0",
     "webpack": "^1.14.0",
     "winston": "^2.3.1",
     "winston-mongodb": "^2.0.8"
