tags的渲染搞定了。但是文章的渲染还是会串，我都写成同步的了……（不过还是因为tag的原因，必须要写成同步的）

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "maic",
   "license": "ISC",
   "dependencies": {
+    "ava": "^0.18.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
+    "chai": "^3.5.0",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "cron": "^1.2.1",
@@ -24,7 +26,7 @@
     "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
     "koa": "^2.0.1",
-    "maic-marked": "^0.3.10",
+    "maic-marked": "^0.3.13",
     "markdown-it": "^8.3.0",
     "marked": "^0.3.6",
     "moment": "^2.17.1",
