完善了post的页面，但是还是有渲染问题

--- a/.gitignore
+++ b/.gitignore
@@ -88,7 +88,8 @@ env.js
 test.js
 test.html
 
-
+／public/img/blog/*
+／public/img/shuoshuo/*
 /public/lib/semantic/src/
 /public/lib/semantic/tasks/
 /public/lib/semantic/gulpfile.js
