--- a/package.json
+++ b/package.json
@@ -13,16 +13,12 @@
   "author": "maic",
   "license": "ISC",
   "dependencies": {
-    "ava": "^0.18.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
-    "chai": "^3.5.0",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "cron": "^1.2.1",
     "express": "^4.14.1",
-    "express-http-proxy": "^0.10.1",
-    "formidable": "^1.1.1",
     "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
     "koa": "^2.0.1",
@@ -35,9 +31,20 @@
     "multer": "^1.3.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
-    "simple-git": "^1.67.0",
-    "webpack": "^1.14.0",
     "winston": "^2.3.1",
     "winston-mongodb": "^2.0.8"
+  },
+  "devDependencies": {
+    "express-http-proxy": "^0.10.1",
+    "chai": "^3.5.0",
+    "ava": "^0.18.2",
+    "webpack": "^1.14.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-minify": "^0.0.15",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^2.1.2"
   }
 }
