--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "highlight.js": "^9.9.0",
     "jquery": "^3.1.1",
     "koa": "^2.0.1",
-    "maic-marked": "^0.3.13",
+    "maic-marked": "^0.3.19",
     "markdown-it": "^8.3.0",
     "marked": "^0.3.6",
     "moment": "^2.17.1",
@@ -35,16 +35,16 @@
     "winston-mongodb": "^2.0.8"
   },
   "devDependencies": {
-    "express-http-proxy": "^0.10.1",
-    "chai": "^3.5.0",
     "ava": "^0.18.2",
-    "webpack": "^1.14.0",
+    "chai": "^3.5.0",
+    "express-http-proxy": "^0.10.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
     "gulp-minify": "^0.0.15",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2"
+    "gulp-uglify": "^2.1.2",
+    "webpack": "^1.14.0"
   }
 }
