--- a/package.json
+++ b/package.json
@@ -13,19 +13,18 @@
   "author": "maic",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.4.7",
     "body-parser": "^1.16.1",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.1",
     "highlight.js": "^9.9.0",
-    "koa": "^2.0.1",
     "maic-marked": "^0.3.19",
     "moment": "^2.17.1",
     "mongodb": "^2.2.24",
     "mongoose": "^4.8.5",
     "multer": "^1.3.0",
     "request-promise": "^4.1.1",
+    "spdy": "^3.4.7",
     "winston": "^2.3.1",
     "winston-mongodb": "^2.0.8"
   },
