--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/maicss/Blog.git"
+    "url": "git+https://github.com/maicss/Blog2.git"
   },
   "author": "maic",
   "license": "ISC",
@@ -21,24 +21,10 @@
     "maic-marked": "^0.3.19",
     "moment": "^2.17.1",
     "mongodb": "^2.2.24",
-    "mongoose": "^4.8.5",
     "multer": "^1.3.0",
     "request-promise": "^4.1.1",
-    "spdy": "^3.4.7",
-    "winston": "^2.3.1",
-    "winston-mongodb": "^2.0.8"
+    "spdy": "^3.4.7"
   },
   "devDependencies": {
-    "ava": "^0.18.2",
-    "chai": "^3.5.0",
-    "express-http-proxy": "^0.10.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-jshint": "^2.0.4",
-    "gulp-minify": "^0.0.15",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.1.2",
-    "webpack": "^1.14.0"
   }
 }
