--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "moment": "^2.17.1",
     "mongodb": "^2.2.24",
     "multer": "^1.3.0",
+    "request": "^2.81.0",
     "request-promise": "^4.1.1",
     "spdy": "^3.4.7"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
