--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.3.0",
     "request": "^2.81.0",
     "request-promise": "^4.1.1",
-    "spdy": "^3.4.7"
+    "spdy": "^3.4.7",
+    "tracer": "^0.8.11"
   },
   "devDependencies": {}
 }
