删除了渲染后的文件。文件渲染好了

--- a/.gitignore
+++ b/.gitignore
@@ -87,15 +87,12 @@ $RECYCLE.BIN/
 env.js
 test.js
 test.html
-
-／public/img/blog/*
-／public/img/moments/*
-/frontEnd/public/lib/semantic/src/
-/frontEnd/public/lib/semantic/tasks/
-/frontEnd/public/lib/semantic/gulpfile.js
 envProduct.js
 /frontEnd/public/archives/*
 yarn.lock
 todos
 settings.json
 launch.json
+.vscode/
+aa.js
+frontEnd/archives/*
