--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "maicss.com",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "doc": "node ./node_modules/.bin/jsdoc -c .jsdoc.json"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,14 @@
     "highlight.js": "^9.9.0",
     "maic-marked": "*",
     "moment": "^2.17.1",
-    "mongodb": "^2.2.24",
+    "mongoose": "^4.11.11",
     "multer": "^1.3.0",
     "request": "^2.81.0",
     "request-promise": "^4.1.1",
     "spdy": "^3.4.7",
     "tracer": "^0.8.11"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jsdoc": "^3.5.5"
+  }
 }
