--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.14.1",
     "highlight.js": "^9.9.0",
+    "koa": "^2.3.0",
+    "koa-body": "^2.3.0",
+    "koa-router": "^7.2.1",
     "maic-marked": "*",
     "moment": "^2.17.1",
     "mongoose": "^4.11.11",
