不知不觉又挖了一个坑，写测试用例……

--- a/.gitignore
+++ b/.gitignore
@@ -75,18 +75,12 @@ jspm_packages
 # Yarn Integrity file
 .yarn-integrity
 
-### Windows template
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
 # Folder config file
 Desktop.ini
 $RECYCLE.BIN/
 .idea/
 env.js
-test.js
-test.html
+test*
 envProduct.js
 yarn.lock
 todos
