--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "maicss.com",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test ./node_modules/.bin/mocha --compilers js:babel-core/register",
     "doc": "node ./node_modules/.bin/jsdoc -c .jsdoc.json"
   },
   "repository": {
@@ -22,6 +22,7 @@
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-compress": "^2.0.0",
     "koa-logger": "^3.0.1",
     "koa-onerror": "^3.1.0",
     "koa-router": "^7.2.1",
@@ -36,6 +37,11 @@
     "tracer": "^0.8.11"
   },
   "devDependencies": {
-    "jsdoc": "^3.5.5"
+    "babel-preset-env": "^1.6.0",
+    "jsdoc": "^3.5.5",
+    "mocha": "^3.5.3",
+    "should": "^13.1.0",
+    "should-http": "^0.1.1",
+    "supertest": "^3.0.0"
   }
 }
