--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa-body": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-compress": "^2.0.0",
+    "koa-helmet": "^3.2.0",
     "koa-logger": "^3.0.1",
     "koa-onerror": "^3.1.0",
     "koa-router": "^7.2.1",
