--- a/package.json
+++ b/package.json
@@ -11,14 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/maicss/Blog2.git"
   },
-  "author": "maic",
+  "author": "maicss",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.16.1",
-    "compression": "^1.6.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.14.1",
-    "highlight.js": "^9.9.0",
     "koa": "^2.3.0",
     "koa-body": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
@@ -29,9 +24,7 @@
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
     "maic-marked": "*",
-    "moment": "^2.17.1",
     "mongoose": "^4.11.11",
-    "multer": "^1.3.0",
     "request": "^2.81.0",
     "request-promise": "^4.1.1",
     "spdy": "^3.4.7",
@@ -41,6 +34,7 @@
     "babel-preset-env": "^1.6.0",
     "jsdoc": "^3.5.5",
     "mocha": "^3.5.3",
+    "nyc": "^11.2.1",
     "should": "^13.1.0",
     "should-http": "^0.1.1",
     "supertest": "^3.0.0"
