--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "koa-onerror": "^3.1.0",
     "koa-router": "^7.2.1",
     "koa-static": "^4.0.1",
-    "maic-marked": "*",
+    "maic-marked": "latest",
     "mongoose": "^4.11.11",
     "request": "^2.81.0",
     "request-promise": "^4.1.1",
