--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "tracer": "^0.8.11"
   },
   "devDependencies": {
+    "@types/node": "^8.0.33",
     "babel-preset-env": "^1.6.0",
     "jsdoc": "^3.5.5",
     "mocha": "^3.5.3",
     "nyc": "^11.2.1",
     "should": "^13.1.0",
     "should-http": "^0.1.1",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "tslint": "^5.7.0",
+    "tslint-config-standard": "^6.0.1",
+    "typescript": "^2.5.3"
   }
 }
