--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
     "target": "esnext",
     "sourceMap": true,
     "moduleResolution": "node",
-    "allowJs": true
+    "allowJs": true,
+    "noImplicitAny": true,
+    "strict": true
   },
   "exclude": [
     "node_modules"
