漏了server…… 現在就差ctx上的login了

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "moduleResolution": "node",
     "allowJs": true,
     "noImplicitAny": true,
-    "strict": true
+    "strict": true,
+    "experimentalDecorators": true
   },
   "exclude": [
     "node_modules"
