--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
   "devDependencies": {
     "@types/koa": "^2.0.40",
     "@types/koa-bodyparser": "^3.0.26",
+    "@types/koa-compress": "^2.0.8",
+    "@types/koa-helmet": "^3.1.2",
     "@types/koa-router": "^7.0.24",
+    "@types/koa-static": "^3.0.2",
     "@types/mongoose": "^4.7.26",
     "@types/node": "^8.0.33",
     "@types/request": "^2.0.8",
+    "@types/spdy": "^3.4.4",
     "babel-preset-env": "^1.6.0",
     "jsdoc": "^3.5.5",
     "mocha": "^3.5.3",
