--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,33 @@ frontEnd/index.html
 frontEnd/static
 package-lock.json
 *.log
+backEnd/500pxCrawler.js
+backEnd/500pxCrawler.js.map
+backEnd/database/index.js
+backEnd/database/index.js.map
+backEnd/database/model.js
+backEnd/database/model.js.map
+backEnd/interfaces.js
+backEnd/interfaces.js.map
+backEnd/manualRenderMD.js
+backEnd/markdownRender.js
+backEnd/markdownRender.js.map
+backEnd/routers/blog.js
+backEnd/routers/blog.js.map
+backEnd/routers/githubHook.js
+backEnd/routers/githubHook.js.map
+backEnd/routers/index.js
+backEnd/routers/index.js.map
+backEnd/routers/indexImage.js
+backEnd/routers/indexImage.js.map
+backEnd/routers/moments.js
+backEnd/routers/moments.js.map
+backEnd/routers/user.js
+backEnd/routers/user.js.map
+backEnd/routers/weather.js
+backEnd/routers/weather.js.map
+backEnd/utils.js
+backEnd/utils.js.map
+env.js.map
+server.js
+server.js.map
