--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,26 @@ out
 *.log
 test.*
 package-lock.json
+backEnd/500pxCrawler.js.map
+backEnd/database/index.js.map
+backEnd/database/model.js
+backEnd/database/model.js.map
+backEnd/interfaces.js
+backEnd/interfaces.js.map
+backEnd/markdownRender.js.map
+backEnd/routers/blog.js
+backEnd/routers/blog.js.map
+backEnd/routers/githubHook.js.map
+backEnd/routers/index.js
+backEnd/routers/index.js.map
+backEnd/routers/indexImage.js
+backEnd/routers/indexImage.js.map
+backEnd/routers/moments.js
+backEnd/routers/moments.js.map
+backEnd/routers/user.js
+backEnd/routers/user.js.map
+backEnd/routers/weather.js
+backEnd/routers/weather.js.map
+backEnd/utils.js.map
+env.js.map
+server.js.map
